flux/clusters/hetzner-new/kubeflow-ingress/networkpolicies.yaml
# Allow ingress-nginx to access centraldashboard
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-nginx-to-centraldashboard
  namespace: kubeflow
spec:
  podSelector:
    matchLabels:
      app: centraldashboard
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - port: 8082
      protocol: TCP
